# MNEMOS

./: .cursorrules  .gitignore  README.md  env.example  pyproject.toml  tasks.md
data/: champion_report_20260216_1744.md  champion_report_20260216_2134.md  champion_report_20260218_2035.md  hybrid_benchmark_results.jsonl  model_outputs.json  model_outputs_checkpoint.json  rerun_ids.json  rerun_ids.txt  results.json
docs/: knowme_bench_local_setup.md  logic_integrity_scenario.md
dos/knowledge_base/: 1_mem0_fact_layer.html.html  2_generative_agents.html  3_graph_rag.html  4_zep_engineering.html  Cognitive-Arch.html  Memary.html
dos/knowledge_base/1_mem0_fact_layer.html_files/: 0  0(1)  640  640(1)
dos/knowledge_base/2_generative_agents_files/: 0  lottery.mlaoln2v7f0faaa0.css
dos/knowledge_base/3_graph_rag_files/: 0  appmsg.mlaoln2vdf4e529f.js
dos/knowledge_base/4_zep_engineering_files/: 0
dos/knowledge_base/Cognitive-Arch_files/: 0
dos/knowledge_base/Memary_files/: 0  640  640(1)
mnemos/: __init__.py  env_loader.py
mnemos/api/: __init__.py  app.py
mnemos/core/: __init__.py  coordinator.py  linguist.py  model_config.py  query_router.py
mnemos/storage/: __init__.py  memos_client.py
mnemos/utils/: timeline.py
mnemos/workers/: __init__.py  graph_builder.py  philosopher.py  philosopher_prompts.py  reflector.py  registrar.py  registrar_prompts.py  verifier.py
scripts/: run_benchmarking.py  run_iq_test.py
tests/: __init__.py  psychologist_test.py
